feat(edit): Add size edit dialog